Fixing description overflow issue

--- a/webapp/src/main/webapp/src/styles.less
+++ b/webapp/src/main/webapp/src/styles.less
@@ -797,7 +797,7 @@ aggregate-report-table {
       h4,
       h5 {
         color: @gray-darker;
-        white-space: pre;
+        white-space: pre-wrap;
       }
 
       button {
